--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "style-loader": "^3.3.4",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4"
+  },
+  "dependencies": {
+    "gsap": "^3.12.5"
   }
 }
